FIX product img covering the close button

--- a/go-order-styles.css
+++ b/go-order-styles.css
@@ -275,10 +275,10 @@ html {
     .design-v2 .modal-product-full .product-item-img {
         text-align: center;
         margin-bottom: -1rem;
+        width: calc(100% - 1.5rem);
         z-index: 1002;
     }
-    .design-v2 .modal-product-full .product-item-img img {
-        width: 60%;
+    .design-v2 .modal-product-full .product-item-img img{
         padding-bottom: 0;
     }
     .btn-group-submit .input-group-quantity button {
@@ -297,6 +297,7 @@ html {
         position: fixed;
         top: 1rem;
         right: 1rem;
+        z-index: 1010 ;
     }
 }
 
